log/build_2025-12-13_22-48-36/encoder_unit/stderr.log
  File "/home/raspi-earth/project_ws/install/encoder_unit/lib/python3.11/site-packages/encoder_unit/as5600_1.py", line 59
    return (hi << 😎 | lo
                  ^
SyntaxError: invalid character '😎' (U+1F60E)

